# DDEP

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260526_0326_phase01_question_db.py  20260526_1050_phase05_service_mvp.py  20260526_1130_phase05_operator_access.py
backend/seeds/: phase01_questions.json
backend/src/ddep_backend/: __init__.py  domains.py  main.py
backend/src/ddep_backend/core/: config.py
backend/src/ddep_backend/db/: __init__.py  session.py
backend/src/ddep_backend/diagnosis_engine/: __init__.py  engine.py  models.py  repository.py
backend/src/ddep_backend/question_db/: __init__.py  __main__.py  cli.py  enums.py  grading.py  importer.py  models.py  seed.py
backend/src/ddep_backend/result_report/: __init__.py  api.py  builder.py  models.py
backend/src/ddep_backend/schemas/: health.py
backend/src/ddep_backend/search_agent/: __init__.py  api.py  engine.py  models.py  providers.py
backend/src/ddep_backend/service_mvp/: __init__.py  api.py  bootstrap.py  models.py  schemas.py  security.py
backend/tests/: test_diagnosis_engine.py  test_diagnosis_engine_repository.py  test_health.py  test_question_db_integration.py  test_question_db_seed.py  test_result_report.py  test_search_agent.py  test_service_mvp.py
docs/: prd-v0.2-decisions.md
docs/phases/: 00-foundation.md  01-question-db.md  (+5 more)
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
(+15 files in other folders)
